--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Presente!</title>
-  <base href="https://chbandeira.github.io/presente-frontend/">
+  <base href="https://chbandeira.github.io/presente/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
