fixed bugs responsavel, removed urlFoto from table, added s3 aws and foto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>Presente!</title>
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.1138b1946d9b13a98225.css"></head>
+<link rel="stylesheet" href="styles.a5f2fe21dd4d9f5696ab.css"></head>
 <body class="h-100 bg-light">
   <app-root></app-root>
-<script type="text/javascript" src="runtime.71371fd2d2aaeb86f298.js"></script><script type="text/javascript" src="polyfills.6dcdd8d6aacf8827015f.js"></script><script type="text/javascript" src="scripts.8aa144d811257a5ceb8d.js"></script><script type="text/javascript" src="main.1c8fa067f1a36783f921.js"></script></body>
+<script type="text/javascript" src="runtime.30ec161be0fc7fd0e7d2.js"></script><script type="text/javascript" src="polyfills.4862c8da4c763c080498.js"></script><script type="text/javascript" src="scripts.aef71d5b009cf80270e5.js"></script><script type="text/javascript" src="main.ff751a131e5fb4227085.js"></script></body>
 </html>
